_/dcpuasm/parser.output

state 0
	$accept: .source $end 

	IDENTIFIER  shift 7
	.  error

	instruction  goto 5
	label  goto 6
	source  goto 1
	toplevel  goto 4
	toplevel_nl  goto 3
	toplevels  goto 2

state 1
	$accept:  source.$end 

	$end  accept
	.  error


state 2
	source:  toplevels.    (1)
	toplevels:  toplevels.toplevel_nl 

	IDENTIFIER  shift 7
	.  reduce 1 (src line 52)

	instruction  goto 5
	label  goto 6
	toplevel  goto 4
	toplevel_nl  goto 8

state 3
	toplevels:  toplevel_nl.    (3)

	.  reduce 3 (src line 64)


state 4
	toplevel_nl:  toplevel.NEWLINE 

	NEWLINE  shift 9
	.  error


state 5
	toplevel:  instruction.    (5)

	.  reduce 5 (src line 75)


state 6
	toplevel:  label.    (6)

	.  reduce 6 (src line 77)


state 7
	instruction:  IDENTIFIER.operands 
	instruction:  IDENTIFIER.    (8)
	label:  IDENTIFIER.COLON 

	COLON  shift 11
	IDENTIFIER  shift 24
	LBRACKET  shift 14
	O  shift 20
	PC  shift 19
	PEEK  shift 16
	POP  shift 15
	PUSH  shift 17
	SP  shift 18
	REGISTER  shift 22
	INTEGER  shift 23
	.  reduce 8 (src line 88)

	integer  goto 21
	operand  goto 12
	register  goto 13
	operands  goto 10

state 8
	toplevels:  toplevels toplevel_nl.    (2)

	.  reduce 2 (src line 58)


state 9
	toplevel_nl:  toplevel NEWLINE.    (4)

	.  reduce 4 (src line 69)


state 10
	instruction:  IDENTIFIER operands.    (7)
	operands:  operands.COMMA operand 

	COMMA  shift 25
	.  reduce 7 (src line 82)


state 11
	label:  IDENTIFIER COLON.    (24)

	.  reduce 24 (src line 171)


state 12
	operands:  operand.    (10)

	.  reduce 10 (src line 99)


state 13
	operand:  register.    (11)

	.  reduce 11 (src line 104)


state 14
	operand:  LBRACKET.register RBRACKET 
	operand:  LBRACKET.register PLUS integer RBRACKET 
	operand:  LBRACKET.integer PLUS register RBRACKET 
	operand:  LBRACKET.integer RBRACKET 

	IDENTIFIER  shift 24
	REGISTER  shift 22
	INTEGER  shift 23
	.  error

	integer  goto 27
	register  goto 26

state 15
	operand:  POP.    (15)

	.  reduce 15 (src line 125)


state 16
	operand:  PEEK.    (16)

	.  reduce 16 (src line 130)


state 17
	operand:  PUSH.    (17)

	.  reduce 17 (src line 135)


state 18
	operand:  SP.    (18)

	.  reduce 18 (src line 140)


state 19
	operand:  PC.    (19)

	.  reduce 19 (src line 145)


state 20
	operand:  O.    (20)

	.  reduce 20 (src line 150)


state 21
	operand:  integer.    (22)

	.  reduce 22 (src line 160)


state 22
	register:  REGISTER.    (23)

	.  reduce 23 (src line 165)


state 23
	integer:  INTEGER.    (25)

	.  reduce 25 (src line 177)


state 24
	integer:  IDENTIFIER.    (26)

	.  reduce 26 (src line 183)


state 25
	operands:  operands COMMA.operand 

	IDENTIFIER  shift 24
	LBRACKET  shift 14
	O  shift 20
	PC  shift 19
	PEEK  shift 16
	POP  shift 15
	PUSH  shift 17
	SP  shift 18
	REGISTER  shift 22
	INTEGER  shift 23
	.  error

	integer  goto 21
	operand  goto 28
	register  goto 13

state 26
	operand:  LBRACKET register.RBRACKET 
	operand:  LBRACKET register.PLUS integer RBRACKET 

	PLUS  shift 30
	RBRACKET  shift 29
	.  error


state 27
	operand:  LBRACKET integer.PLUS register RBRACKET 
	operand:  LBRACKET integer.RBRACKET 

	PLUS  shift 31
	RBRACKET  shift 32
	.  error


state 28
	operands:  operands COMMA operand.    (9)

	.  reduce 9 (src line 93)


state 29
	operand:  LBRACKET register RBRACKET.    (12)

	.  reduce 12 (src line 110)


state 30
	operand:  LBRACKET register PLUS.integer RBRACKET 

	IDENTIFIER  shift 24
	INTEGER  shift 23
	.  error

	integer  goto 33

state 31
	operand:  LBRACKET integer PLUS.register RBRACKET 

	REGISTER  shift 22
	.  error

	register  goto 34

state 32
	operand:  LBRACKET integer RBRACKET.    (21)

	.  reduce 21 (src line 155)


state 33
	operand:  LBRACKET register PLUS integer.RBRACKET 

	RBRACKET  shift 35
	.  error


state 34
	operand:  LBRACKET integer PLUS register.RBRACKET 

	RBRACKET  shift 36
	.  error


state 35
	operand:  LBRACKET register PLUS integer RBRACKET.    (13)

	.  reduce 13 (src line 115)


state 36
	operand:  LBRACKET integer PLUS register RBRACKET.    (14)

	.  reduce 14 (src line 120)


19 terminals, 11 nonterminals
27 grammar rules, 37/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
60 working sets used
memory: parser 25/30000
0 extra closures
37 shift entries, 1 exceptions
16 goto entries
5 entries saved by goto default
Optimizer space used: output 58/30000
58 table entries, 6 zero
maximum spread: 19, maximum offset: 31
